2012-11-07  Christophe Dumez  <christophe.dumez@intel.com>

        Add replaceWithLiteral() method to WTF::String
        https://bugs.webkit.org/show_bug.cgi?id=101257

        Reviewed by Benjamin Poulain.

        Add API tests for String::replaceWithLiteral() and corresponding
        StringImpl methods.

        * TestWebKitAPI/CMakeLists.txt: Add WTFString API tests to CMake.
        * TestWebKitAPI/Tests/WTF/StringImpl.cpp:
        (TestWebKitAPI::TEST):
        (TestWebKitAPI):
        * TestWebKitAPI/Tests/WTF/WTFString.cpp:
        (TestWebKitAPI::TEST):

2012-11-07  Oswald Buddenhagen <oswald.buddenhagen@nokia.com>

        [Qt] Fix build of modules depending on QtWebKit when using prefix
        https://bugs.webkit.org/show_bug.cgi?id=101437

        Reviewed by Simon Hausmann.

        Remove setting of MODULE_QMAKE_OUTDIR from here, it's been moved to .qmake.conf.

        * qmake/mkspecs/features/default_pre.prf:

2012-11-06  Dan Beam  <dbeam@chromium.org>

        Enable REQUEST_AUTOCOMPLETE for chromium port
        https://bugs.webkit.org/show_bug.cgi?id=101376

        Reviewed by Adam Barth.

        This patch enables the feature flag REQUEST_AUTOCOMPLETE in WebKit/chromium only to allow web authors to start to use
        HTMLFormElement#requestAutocomplete as the chrome-side work progresses further.

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::TestShell):

        Enables the requestAutocomplete runtime feature flag during tests.

2012-11-06  KyungTae Kim  <ktf.kim@samsung.com>

        [WK2][EFL] Add shortcut for setting a pagination mode on Minibrowser
        https://bugs.webkit.org/show_bug.cgi?id=100301

        Reviewed by Gyuyoung Kim.

        Setting pagination modes is for a paginated view - left to right / right to left / top to bottom / bottom to top.
        Assign a shortcut "F7" to set pagination modes for tests.

        * MiniBrowser/efl/main.c:
        (on_key_down):
